packages/nci-engine/tests/snapshots/snapshot_tests__rust_declare-namespace-variable-and-type.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "declare-namespace-variable-and-type",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "declare-namespace-variable-and-type@1.0.0::AppSurface",
      "name": "AppSurface",
      "kind": 268,
      "kindName": "ModuleDeclaration",
      "package": "declare-namespace-variable-and-type",
      "filePath": "index.d.ts",
      "signature": "export declare namespace AppSurface {\n  var primaryHandle: ControllerHandle;\n\n  interface ControllerHandle {\n    dispose(): void;\n  }\n}",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [
        "declare-namespace-variable-and-type@1.0.0::index.d.ts::AppSurface.ControllerHandle",
        "declare-namespace-variable-and-type@1.0.0::index.d.ts::AppSurface.primaryHandle"
      ],
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    },
    {
      "id": "declare-namespace-variable-and-type@1.0.0::index.d.ts::AppSurface.ControllerHandle",
      "name": "AppSurface.ControllerHandle",
      "parentSymbolId": "declare-namespace-variable-and-type@1.0.0::AppSurface",
      "enclosingModuleDeclarationId": "declare-namespace-variable-and-type@1.0.0::AppSurface",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "declare-namespace-variable-and-type",
      "filePath": "index.d.ts",
      "signature": "interface ControllerHandle {\n    dispose(): void;\n  }",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": true
    },
    {
      "id": "declare-namespace-variable-and-type@1.0.0::index.d.ts::AppSurface.ControllerHandle.dispose",
      "name": "AppSurface.ControllerHandle.dispose",
      "parentSymbolId": "declare-namespace-variable-and-type@1.0.0::index.d.ts::AppSurface.ControllerHandle",
      "enclosingModuleDeclarationId": "declare-namespace-variable-and-type@1.0.0::AppSurface",
      "kind": 174,
      "kindName": "MethodSignature",
      "package": "declare-namespace-variable-and-type",
      "filePath": "index.d.ts",
      "signature": "dispose(): void;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": true
    },
    {
      "id": "declare-namespace-variable-and-type@1.0.0::index.d.ts::AppSurface.primaryHandle",
      "name": "AppSurface.primaryHandle",
      "parentSymbolId": "declare-namespace-variable-and-type@1.0.0::AppSurface",
      "enclosingModuleDeclarationId": "declare-namespace-variable-and-type@1.0.0::AppSurface",
      "kind": 244,
      "kindName": "VariableStatement",
      "package": "declare-namespace-variable-and-type",
      "filePath": "index.d.ts",
      "signature": "declare const primaryHandle: ControllerHandle",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [
        "declare-namespace-variable-and-type@1.0.0::index.d.ts::AppSurface.ControllerHandle"
      ],
      "isInternal": true
    }
  ],
  "totalSymbols": 4,
  "totalFiles": 1,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
