packages/nci-engine/tests/snapshots/snapshot_tests__rust_exports-plus-types-root.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "exports-plus-types-root",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "exports-plus-types-root@1.0.0::RootSurface",
      "name": "RootSurface",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "exports-plus-types-root",
      "filePath": "index.d.ts",
      "sourcePackageName": "exports-plus-types-root",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "export interface RootSurface {\n  rootFlag: true;\n}",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "exports-plus-types-root@1.0.0::RootSurface.rootFlag",
      "name": "RootSurface.rootFlag",
      "parentSymbolId": "exports-plus-types-root@1.0.0::RootSurface",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "exports-plus-types-root",
      "filePath": "index.d.ts",
      "sourcePackageName": "exports-plus-types-root",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "rootFlag: true;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "exports-plus-types-root@1.0.0::UtilitySurface",
      "name": "UtilitySurface",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "exports-plus-types-root",
      "filePath": "utils.d.ts",
      "sourcePackageName": "exports-plus-types-root",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "utils.d.ts",
      "signature": "export interface UtilitySurface {\n  utilityFlag: true;\n}",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "exports-plus-types-root@1.0.0::UtilitySurface.utilityFlag",
      "name": "UtilitySurface.utilityFlag",
      "parentSymbolId": "exports-plus-types-root@1.0.0::UtilitySurface",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "exports-plus-types-root",
      "filePath": "utils.d.ts",
      "sourcePackageName": "exports-plus-types-root",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "utils.d.ts",
      "signature": "utilityFlag: true;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false
    }
  ],
  "totalSymbols": 4,
  "totalFiles": 2,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
